# class_2

./: CMakeLists.txt
homework/: CMakeLists.txt  main.cpp
homework/include/: video_processor.hpp
homework/src/: video_processor.cpp
homework/utility/: tool.cpp
learn/include/: greeter.hpp
learn/src/: greeter.cpp  main.cpp
src/: greeter.cpp  main.cpp
